fix: resolve test compilation errors and achieve >=90% coverage